--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,7 @@
 theme: jekyll-theme-minimal
 title: ZSD app privacy page
 description: Public policie
+# Политика конфидециальности
+<header>
+Что-то по гитовском
+<\header>
